--- a/Housing prices.ipynb
+++ b/Housing prices.ipynb
@@ -4421,13 +4421,11 @@
      "evalue": "invalid syntax (Temp/ipykernel_24264/1076708683.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Jesper\\AppData\\Local\\Temp/ipykernel_24264/1076708683.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Running the model on the test set\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Jesper\\AppData\\Local\\Temp/ipykernel_24264/1076708683.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Running the model 
+      test set\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
-   "source": [
-    "Running the model on the test set"
-   ]
   },
   {
    "cell_type": "code",
